# url_shortner_fastapi

./: .env.example  .gitignore  main.py  pyproject.toml
config/: __init__.py  database.py
core/: __init__.py  auth.py  auth_util.py  url_logic.py
core/auth/: auth.py
models/: __init__.py  model.py
schemas/: __init__.py  req_res_schema.py  schema.py
utils/: __init__.py  env_provider.py  generate_unique_url.py
